[package]
authors = [
    "laiboonh"
]
categories = ["gui", "wasm", "web-programming"]
description = "github page built using yew to demo app which tracks investments"
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT/Apache-2.0"
name = "laiboonh"
readme = "README.md"
repository = "https://github.com/laiboonh/laiboonh.github.io.git"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
